# php-version-manager

./: .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  build-php.sh  build.rs  build.sh  install.sh  php-versions.json  renovate.json
.github/workflows/: build-php.yml  check-php-versions.yml  release.yml
src/: cli.rs  constants.rs  fs.rs  interactive.rs  main.rs  network.rs  shell.rs  update.rs  utils.rs
src/commands/: current.rs  env.rs  init.rs  install.rs  ls.rs  ls_remote.rs  mod.rs  self_update.rs  uninstall.rs  use_cmd.rs  xdebug.rs
tests/: cli.rs  xdebug.rs
tests/e2e/: Dockerfile  README.md  _lib.sh  fpm-readme.sh  run.sh
tests/e2e/cases/: 01_install.sh  02_ls.sh  03_use_wrapper.sh  04_current.sh  05_php_version_hook.sh  06_use_missing.sh  07_patch_update.sh  08_fpm_config.sh  09_fpm_run.sh  10_fcgi_tcp.sh  11_fcgi_sock.sh  12_php_ini_effective.sh  13_pid_log.sh  14_fpm_shutdown.sh  15_uninstall.sh
