[package]
name = "php-version-manager"
version = "1.0.4"
edition = "2024"
description = "A blazing fast, zero-configuration PHP version manager"
repository = "https://github.com/WebProject-xyz/php-version-manager"
license = "GPL-3.0-or-later"

[[bin]]
name = "pvm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12.0"
dirs = "6.0.0"
env_logger = "0.11.9"
flate2 = "1.1.9"
fs4 = "0.13.1"
futures-util = "0.3.32"
indicatif = "0.18.4"
log = "0.4.22"
reqwest = { version = "0.13.2", features = ["stream", "rustls", "json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
tokio = { version = "1.50.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.1.2"
mockito = "1.7.2"
predicates = "3.1.4"
tempfile = "3.26.0"

[build-dependencies]
chrono = "0.4.39"

# Optimize for binary size and performance
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Maximize size reduction
panic = "abort"     # Remove panic unwinding
strip = true        # Strip symbols from binary
